--- a/SCDataconversion/Common/Localization/Pickens/log_ftp.txt
+++ b/SCDataconversion/Common/Localization/Pickens/log_ftp.txt
@@ -209,3 +209,109 @@
 . 2014-02-27 03:38:49.843 Upload successful
 > 2014-02-27 03:38:49.843 Script: close
 . 2014-02-27 03:38:49.844 Disconnected from server
+. 2014-02-28 05:12:26.130 --------------------------------------------------------------------------
+. 2014-02-28 05:12:26.131 WinSCP Version 5.1.7 (Build 3446) (OS 6.1.7601 Service Pack 1)
+. 2014-02-28 05:12:26.131 Configuration: C:\Program Files (x86)\WinSCP\WinSCP.ini
+. 2014-02-28 05:12:26.132 Local account: RENEGADE\SQL2008User
+. 2014-02-28 05:12:26.132 Working directory: C:\Program Files (x86)\WinSCP
+. 2014-02-28 05:12:26.132 Process ID: 1784
+. 2014-02-28 05:12:26.132 Command-line: "C:\Program Files (x86)\WinSCP\WinSCP.exe" -script="E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\ValidationReport_Upload_FTP.txt" /log="E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\log_ftp.txt"
+. 2014-02-28 05:12:26.132 Time zone: Current: GMT-7, Standard: GMT-7, DST: GMT-6, DST Start: 3/9/2014, DST End: 11/2/2014
+. 2014-02-28 05:12:26.132 Login time: Friday, February 28, 2014 5:12:26 AM
+. 2014-02-28 05:12:26.132 --------------------------------------------------------------------------
+. 2014-02-28 05:12:26.132 Session name: pickens@ftp.excent.com (Ad-Hoc session)
+. 2014-02-28 05:12:26.132 Host name: ftp.excent.com (Port: 21)
+. 2014-02-28 05:12:26.132 User name: pickens (Password: Yes, Key file: No)
+. 2014-02-28 05:12:26.132 Tunnel: No
+. 2014-02-28 05:12:26.132 Transfer Protocol: FTP
+. 2014-02-28 05:12:26.132 Ping type: C, Ping interval: 30 sec; Timeout: 15 sec
+. 2014-02-28 05:12:26.132 Proxy: none
+. 2014-02-28 05:12:26.132 FTP: FTPS: Explicit TLS; Passive: Yes [Force IP: A]; List all: A
+. 2014-02-28 05:12:26.132 Session reuse: Yes
+. 2014-02-28 05:12:26.132 Local directory: default, Remote directory: home, Update: Yes, Cache: Yes
+. 2014-02-28 05:12:26.132 Cache directory changes: Yes, Permanent: Yes
+. 2014-02-28 05:12:26.132 DST mode: 1; Timezone offset: 0h 0m
+. 2014-02-28 05:12:26.132 --------------------------------------------------------------------------
+. 2014-02-28 05:12:26.133 Connecting to ftp.excent.com ...
+. 2014-02-28 05:12:26.136 Connected with ftp.excent.com, negotiating SSL connection...
+< 2014-02-28 05:12:26.138 220-Welcome to Excent FTP.
+< 2014-02-28 05:12:26.138 220-
+< 2014-02-28 05:12:26.138 220 We monitor connections so please, no monkey business.
+> 2014-02-28 05:12:26.138 AUTH TLS
+< 2014-02-28 05:12:26.140 234 Using authentication type TLS
+. 2014-02-28 05:12:26.413 Using TLSv1, cipher TLSv1/SSLv3: AES256-SHA, 1024 bit RSA
+. 2014-02-28 05:12:26.413 SSL connection established. Waiting for welcome message...
+> 2014-02-28 05:12:26.413 USER pickens
+< 2014-02-28 05:12:26.413 331 Password required for pickens
+> 2014-02-28 05:12:26.413 PASS *******
+< 2014-02-28 05:12:26.414 230 Logged on
+> 2014-02-28 05:12:26.414 SYST
+< 2014-02-28 05:12:26.415 215 UNIX emulated by FileZilla
+> 2014-02-28 05:12:26.415 FEAT
+< 2014-02-28 05:12:26.416 211-Features:
+< 2014-02-28 05:12:26.416  MDTM
+< 2014-02-28 05:12:26.416  REST STREAM
+< 2014-02-28 05:12:26.416  SIZE
+< 2014-02-28 05:12:26.416  MLST type*;size*;modify*;
+< 2014-02-28 05:12:26.416  MLSD
+< 2014-02-28 05:12:26.416  AUTH SSL
+< 2014-02-28 05:12:26.416  AUTH TLS
+< 2014-02-28 05:12:26.416  PROT
+< 2014-02-28 05:12:26.416  PBSZ
+< 2014-02-28 05:12:26.416  UTF8
+< 2014-02-28 05:12:26.416  CLNT
+< 2014-02-28 05:12:26.416  MFMT
+< 2014-02-28 05:12:26.416 211 End
+> 2014-02-28 05:12:26.416 PBSZ 0
+< 2014-02-28 05:12:26.417 200 PBSZ=0
+> 2014-02-28 05:12:26.417 PROT P
+< 2014-02-28 05:12:26.417 200 Protection level set to P
+. 2014-02-28 05:12:26.417 Connected
+. 2014-02-28 05:12:26.417 --------------------------------------------------------------------------
+. 2014-02-28 05:12:26.417 Using FTP protocol.
+. 2014-02-28 05:12:26.418 Doing startup conversation with host.
+> 2014-02-28 05:12:26.418 PWD
+< 2014-02-28 05:12:26.419 257 "/" is current directory.
+. 2014-02-28 05:12:26.419 Getting current directory name.
+. 2014-02-28 05:12:26.419 Startup conversation with host finished.
+< 2014-02-28 05:12:26.419 Script: Active session: [1] pickens@ftp.excent.com
+> 2014-02-28 05:12:26.419 Script: option transfer binary
+< 2014-02-28 05:12:26.419 Script: transfer        binary    
+> 2014-02-28 05:12:26.419 Script: lcd "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens"
+< 2014-02-28 05:12:26.419 Script: E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens
+> 2014-02-28 05:12:26.419 Script: cd /
+. 2014-02-28 05:12:26.419 Cached directory change via "/" to "/".
+. 2014-02-28 05:12:26.419 Getting current directory name.
+< 2014-02-28 05:12:26.419 Script: /
+> 2014-02-28 05:12:26.419 Script: put "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\ValidationReport_Detail.xls"
+. 2014-02-28 05:12:26.419 Copying 1 files/directories to remote directory "/"
+. 2014-02-28 05:12:26.419   PrTime: Yes; PrRO: No; Rght: rw-r--r--; PrR: No (No); FnCs: N; RIC: 0100; Resume: S (102400); CalcS: No; Mask: 
+. 2014-02-28 05:12:26.419   TM: B; ClAr: No; CPS: 0; InclM: 
+. 2014-02-28 05:12:26.419   AscM: *.*html; *.htm; *.txt; *.php; *.php3; *.cgi; *.c; *.cpp; *.h; *.pas; *.bas; *.tex; *.pl; *.js; .htaccess; *.xtml; *.css; *.cfg; *.ini; *.sh; *.xml
+. 2014-02-28 05:12:26.419 File: "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\ValidationReport_Detail.xls"
+. 2014-02-28 05:12:26.419 Copying "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\ValidationReport_Detail.xls" to remote directory started.
+. 2014-02-28 05:12:26.419 Binary transfer mode selected.
+. 2014-02-28 05:12:26.419 Starting upload of E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\ValidationReport_Detail.xls
+> 2014-02-28 05:12:26.419 TYPE A
+< 2014-02-28 05:12:26.420 200 Type set to A
+> 2014-02-28 05:12:26.420 PASV
+< 2014-02-28 05:12:26.421 227 Entering Passive Mode (10,0,1,27,199,0)
+> 2014-02-28 05:12:26.421 MLSD
+< 2014-02-28 05:12:26.423 150 Connection accepted
+. 2014-02-28 05:12:26.423 SSL connection established
+< 2014-02-28 05:12:26.424 226 Transfer OK
+. 2014-02-28 05:12:26.424 type=dir;modify=20140211064224; DbBackups
+. 2014-02-28 05:12:26.424 type=file;modify=20140227133659;size=7585792; ValidationReport_Detail.xls
+> 2014-02-28 05:12:26.425 TYPE I
+< 2014-02-28 05:12:26.425 200 Type set to I
+> 2014-02-28 05:12:26.425 PASV
+< 2014-02-28 05:12:26.426 227 Entering Passive Mode (10,0,1,27,199,1)
+> 2014-02-28 05:12:26.426 STOR ValidationReport_Detail.xls
+< 2014-02-28 05:12:26.429 150 Connection accepted
+. 2014-02-28 05:12:26.432 SSL connection established
+< 2014-02-28 05:12:26.497 226 Transfer OK
+> 2014-02-28 05:12:26.497 MFMT 20140228121225 ValidationReport_Detail.xls
+< 2014-02-28 05:12:26.497 213 modify=20140228121225; /ValidationReport_Detail.xls
+. 2014-02-28 05:12:26.498 Upload successful
+> 2014-02-28 05:12:26.498 Script: close
+. 2014-02-28 05:12:26.498 Disconnected from server
